Fix: scroll on mobile devices redes page

--- a/app/styles/socials.module.css
+++ b/app/styles/socials.module.css
@@ -1,12 +1,13 @@
 .container {
+  position: absolute;
+  inset: 0;
   max-width: 40rem;
-  min-height: 100vh;
+  margin: 0 auto;
   padding: min(15vh, 15rem) 1rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin: 0 auto;
 }
 
 .logo_links_container {
